Fix image comparison logic

--- a/notebooks/run_comparison.ipynb
+++ b/notebooks/run_comparison.ipynb
@@ -690,32 +690,53 @@
     "        size_str = f\"{img['size'] / 1024:.2f} KB\" if img['size'] else \"Unknown\"\n",
     "        print(f\"  - {img['name']} ({size_str})\")\n",
     "\n",
-    "# Collect all unique image names for comparison\n",
-    "all_image_names = set()\n",
+    "def extract_image_base_name(filename):\n",
+    "    \"\"\"Extract base name from image filename, removing hash suffix.\n",
+    "    \n",
+    "    WandB appends hashes like: path/name_hash.ext\n",
+    "    This function returns: path/name\n",
+    "    \"\"\"\n",
+    "    import re\n",
+    "    # Match pattern: anything_<hash>.<extension>\n",
+    "    # Hash is typically 16-20 hex characters\n",
+    "    match = re.match(r'^(.+)_[a-f0-9]{16,}(\\.[^.]+)$', filename)\n",
+    "    if match:\n",
+    "        return match.group(1) + match.group(2)\n",
+    "    return filename\n",
+    "\n",
+    "# Group images by their base name (without hash)\n",
+    "image_groups = defaultdict(lambda: {run_id: None for run_id in RUN_IDS})\n",
+    "\n",
     "for run_id in RUN_IDS:\n",
-    "    all_image_names.update([img['name'] for img in all_run_images[run_id]])\n",
+    "    for img in all_run_images[run_id]:\n",
+    "        base_name = extract_image_base_name(img['name'])\n",
+    "        image_groups[base_name][run_id] = img\n",
     "\n",
     "print(f\"\\n{'=' * 80}\")\n",
     "print(\"Displaying Images Side by Side\")\n",
     "print(\"=\" * 80)\n",
     "\n",
-    "if not all_image_names:\n",
-    "    print(\"⚠️  No images found in either run.\")\n",
+    "if not image_groups:\n",
+    "    print(\"⚠️  No images found in any run.\")\n",
     "else:\n",
     "    # Display each image comparison\n",
-    "    for img_name in sorted(all_image_names):\n",
+    "    for base_name in sorted(image_groups.keys()):\n",
+    "        print(f\"\\n📷 Comparing: {base_name}\")\n",
+    "        \n",
     "        # Download images from all runs\n",
     "        run_images = []\n",
     "        for run_id in RUN_IDS:\n",
-    "            img_file = next((f for f in all_run_images[run_id] if f['name'] == img_name), None)\n",
+    "            img_file = image_groups[base_name][run_id]\n",
     "            image = None\n",
     "            if img_file:\n",
-    "                print(f\"Downloading from run {run_id}: {img_name}\")\n",
+    "                print(f\"  Downloading from run {run_id}: {img_file['name']}\")\n",
     "                image = download_image(img_file['url'])\n",
+    "            else:\n",
+    "                print(f\"  Run {run_id}: No matching image found\")\n",
     "            run_images.append(image)\n",
     "        \n",
     "        # Display side by side\n",
-    "        display(HTML(display_images_side_by_side(run_images, img_name)))\n",
+    "        display(HTML(display_images_side_by_side(run_images, base_name)))\n",
     "        print()\n",
     "\n",
     "print(\"✓ Image comparison complete!\")"
