Remove visual indicators from prints

--- a/notebooks/run_comparison.ipynb
+++ b/notebooks/run_comparison.ipynb
@@ -164,11 +164,11 @@
     "        except Exception as e:\n",
     "            print(f\"  Warning: Could not fetch artifacts: {e}\")\n",
     "        \n",
-    "        print(f\"  ✓ Successfully fetched {len(run_data['history'])} history steps\")\n",
+    "        print(f\"  Successfully fetched {len(run_data['history'])} history steps\")\n",
     "        return run_data\n",
     "        \n",
     "    except Exception as e:\n",
-    "        print(f\"  ✗ Error fetching run: {e}\")\n",
+    "        print(f\"  Error fetching run: {e}\")\n",
     "        return None\n",
     "\n",
     "# Fetch data for all runs\n",
@@ -176,7 +176,7 @@
     "for run_id in RUN_IDS:\n",
     "    runs_data[run_id] = fetch_run_data(run_id)\n",
     "\n",
-    "print(f\"\\n✓ Loaded data for {len([r for r in runs_data.values() if r])}/{len(RUN_IDS)} runs\")"
+    "print(f\"\\nLoaded data for {len([r for r in runs_data.values() if r])}/{len(RUN_IDS)} runs\")"
    ]
   },
   {
@@ -231,7 +231,7 @@
     "        comparison_data[f\"Run {i+1} ({run_id})\"].append(format_value(runs_data[run_id]['config'].get(key)))\n",
     "\n",
     "df_comparison = pd.DataFrame(comparison_data)\n",
-    "print(\"✓ Extracted metrics and parameters for comparison\")\n",
+    "print(\"Extracted metrics and parameters for comparison\")\n",
     "display(df_comparison.head(20))"
    ]
   },
@@ -264,11 +264,11 @@
     "HTML(\"\"\"\n",
     "<div style=\"display: flex; gap: 20px; overflow-x: auto;\">\n",
     "    <div style=\"flex: 1;\">\n",
-    "        <h3 style=\"color: #2e86de; margin-bottom: 10px;\">📋 Run Metadata</h3>\n",
+    "        <h3 style=\"color: #2e86de; margin-bottom: 10px;\">Run Metadata</h3>\n",
     "        {meta_html}\n",
     "    </div>\n",
     "    <div style=\"flex: 1;\">\n",
-    "        <h3 style=\"color: #10ac84; margin-bottom: 10px;\">📊 Summary Metrics</h3>\n",
+    "        <h3 style=\"color: #10ac84; margin-bottom: 10px;\">Summary Metrics</h3>\n",
     "        {summary_html}\n",
     "    </div>\n",
     "</div>\n",
@@ -525,7 +525,7 @@
    "source": [
     "# Compare Files and Artifacts\n",
     "\n",
-    "print(\"📁 Files Comparison\")\n",
+    "print(\"Files Comparison\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# Build dynamic column names based on RUN_IDS\n",
@@ -557,7 +557,7 @@
     "df_files = pd.DataFrame(files_data)\n",
     "display(df_files.head(20))\n",
     "\n",
-    "print(\"\\n📦 Artifacts Comparison\")\n",
+    "print(\"\\nArtifacts Comparison\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# Build dynamic column names based on RUN_IDS\n",
@@ -647,7 +647,7 @@
     "    html = f\"\"\"\n",
     "    <div style=\"display: flex; gap: 20px; flex-wrap: wrap; margin-bottom: 30px;\">\n",
     "        <div style=\"width: 100%; text-align: center; padding: 10px; background: #f8f9fa; border-radius: 5px; margin-bottom: 10px;\">\n",
-    "            <h3 style=\"margin: 0;\">🖼️ {image_name}</h3>\n",
+    "            <h3 style=\"margin: 0;\">{image_name}</h3>\n",
     "        </div>\n",
     "        {image_divs}\n",
     "    </div>\n",
@@ -676,7 +676,7 @@
     "    \n",
     "    return image_files\n",
     "\n",
-    "print(\"🖼️ Image Comparison\")\n",
+    "print(\"Image Comparison\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "# Get image files from all runs\n",
@@ -717,11 +717,11 @@
     "print(\"=\" * 80)\n",
     "\n",
     "if not image_groups:\n",
-    "    print(\"⚠️  No images found in any run.\")\n",
+    "    print(\"WARNING: No images found in any run.\")\n",
     "else:\n",
     "    # Display each image comparison\n",
     "    for base_name in sorted(image_groups.keys()):\n",
-    "        print(f\"\\n📷 Comparing: {base_name}\")\n",
+    "        print(f\"\\nComparing: {base_name}\")\n",
     "        \n",
     "        # Download images from all runs\n",
     "        run_images = []\n",
@@ -739,7 +739,7 @@
     "        display(HTML(display_images_side_by_side(run_images, base_name)))\n",
     "        print()\n",
     "\n",
-    "print(\"✓ Image comparison complete!\")"
+    "print(\"Image comparison complete!\")"
    ]
   },
   {
@@ -752,7 +752,7 @@
     "# Summary and Quick Links\n",
     "\n",
     "print(\"=\" * 80)\n",
-    "print(\"📊 RUN COMPARISON SUMMARY\")\n",
+    "print(\"RUN COMPARISON SUMMARY\")\n",
     "print(\"=\" * 80)\n",
     "\n",
     "for i, run_id in enumerate(RUN_IDS, 1):\n",
@@ -760,7 +760,7 @@
     "    summary = runs_data[run_id]['summary']\n",
     "    \n",
     "    print(f\"\\n{'─' * 80}\")\n",
-    "    print(f\"🏃 RUN {i}: {run_id}\")\n",
+    "    print(f\"RUN {i}: {run_id}\")\n",
     "    print(f\"{'─' * 80}\")\n",
     "    print(f\"Name:        {meta['name']}\")\n",
     "    print(f\"Display:     {meta['display_name']}\")\n",
@@ -769,10 +769,10 @@
     "    print(f\"Tags:        {', '.join(meta['tags']) if meta['tags'] else 'None'}\")\n",
     "    print(f\"Group:       {meta['group'] or 'None'}\")\n",
     "    print(f\"Job Type:    {meta['job_type']}\")\n",
-    "    print(f\"\\n🔗 WandB URL: {meta['url']}\")\n",
-    "    print(f\"\\n📈 History:   {len(runs_data[run_id]['history'])} steps, {len(runs_data[run_id]['history_keys'])} metrics\")\n",
-    "    print(f\"📁 Files:     {len(runs_data[run_id]['files'])}\")\n",
-    "    print(f\"📦 Artifacts: {len(runs_data[run_id]['artifacts'])}\")\n",
+    "    print(f\"\\nWandB URL: {meta['url']}\")\n",
+    "    print(f\"\\nHistory:   {len(runs_data[run_id]['history'])} steps, {len(runs_data[run_id]['history_keys'])} metrics\")\n",
+    "    print(f\"Files:     {len(runs_data[run_id]['files'])}\")\n",
+    "    print(f\"Artifacts: {len(runs_data[run_id]['artifacts'])}\")\n",
     "\n",
     "print(f\"\\n{'=' * 80}\")\n",
     "print(\"Key Statistics\")\n",
@@ -791,7 +791,7 @@
     "print(f\"Common history metrics: {len(common_metrics)}\")\n",
     "\n",
     "print(f\"\\n{'=' * 80}\")\n",
-    "print(\"✓ Comparison complete!\")\n",
+    "print(\"Comparison complete!\")\n",
     "print(\"=\" * 80)"
    ]
   },
