Fix fitness plotting method call

--- a/notebooks/experiment_generation.ipynb
+++ b/notebooks/experiment_generation.ipynb
@@ -371,7 +371,7 @@
     "        replication_visualizations = [\n",
     "            plot_sample_and_counterfactual_heatmap(ORIGINAL_SAMPLE, ORIGINAL_SAMPLE_PREDICTED_CLASS, counterfactual, MODEL.predict(pd.DataFrame([counterfactual])), dict_non_actionable),\n",
     "            plot_sample_and_counterfactual_comparison(MODEL, ORIGINAL_SAMPLE, SAMPLE_DATAFRAME, counterfactual,CONSTRAINTS, CLASS_COLORS_LIST),\n",
-    "            COUNTERFACTUAL_DPG.plot_fitness()  # Use the stored model's fitness data\n",
+    "            CounterFactualVisualizer.plot_fitness(COUNTERFACTUAL_DPG)  # Use the stored model's fitness data\n",
     "        ]\n",
     "        \n",
     "        # Store visualizations in the replication object\n",
@@ -397,7 +397,7 @@
     "        'features_names': FEATURES_NAMES,\n",
     "        'target_class': TARGET_CLASS\n",
     "    }, f)\n",
-    "print(f\"\\nSaved visualization data to {viz_filepath}\")\n"
+    "print(f\"\\nSaved visualization data to {viz_filepath}\")"
    ]
   },
   {
