--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -98,7 +98,7 @@
     "\n",
     "# Optional: Only fetch runs created after this timestamp (set to None for no filter)\n",
     "# Format: ISO 8601 string, e.g., \"2026-01-20T22:00:00\"\n",
-    "MIN_CREATED_AT = \"2026-01-21T22:00:00\" \n",
+    "MIN_CREATED_AT = \"2026-01-26T22:00:00\" \n",
     "\n",
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
     "APPLY_EXCLUDED_DATASETS = True\n",
@@ -537,7 +537,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": ".venv (3.10.12)",
    "language": "python",
    "name": "python3"
   },
