Add dataset inclusion filter

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -103,12 +103,17 @@
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
     "APPLY_EXCLUDED_DATASETS = True\n",
     "\n",
+    "# Optional: Only include these specific datasets (set to None to disable this filter)\n",
+    "INCLUDED_DATASETS = ['iris', 'abalone', 'diabetes', 'banknote_authentication', \n",
+    "                     'education_dataset', 'energy_dataset', 'finance_dataset']\n",
+    "\n",
     "print(f\"Entity: {WANDB_ENTITY}\")\n",
     "print(f\"Project: {WANDB_PROJECT}\")\n",
     "print(f\"Datasets filter: {SELECTED_DATASETS or 'All'}\")\n",
     "print(f\"Load from cache: {LOAD_FROM_CACHE}\")\n",
     "print(f\"Min created at: {MIN_CREATED_AT}\")\n",
-    "print(f\"Apply excluded datasets: {APPLY_EXCLUDED_DATASETS}\")"
+    "print(f\"Apply excluded datasets: {APPLY_EXCLUDED_DATASETS}\")\n",
+    "print(f\"Included datasets: {INCLUDED_DATASETS if INCLUDED_DATASETS else 'All'}\")\n"
    ]
   },
   {
@@ -144,7 +149,14 @@
     "        datasets=SELECTED_DATASETS,\n",
     "        limit=500,\n",
     "        min_created_at=MIN_CREATED_AT\n",
-    "    )\n"
+    "    )\n",
+    "\n",
+    "# Apply included datasets filter if specified\n",
+    "if INCLUDED_DATASETS is not None:\n",
+    "    pre_filter_count = len(raw_df)\n",
+    "    raw_df = raw_df[raw_df['dataset'].isin(INCLUDED_DATASETS)]\n",
+    "    print(f\"Applied included datasets filter: {pre_filter_count} -> {len(raw_df)} runs\")\n",
+    "    print(f\"Included datasets: {sorted(raw_df['dataset'].unique())}\")\n"
    ]
   },
   {
