--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -175,14 +175,26 @@
    "outputs": [],
    "source": [
     "# Preview raw data\n",
-    "display_cols = ['run_name', 'dataset', 'technique', 'state'] + list(COMPARISON_METRICS.keys())[:5]\n",
+    "display_cols = ['run_id', 'run_name', 'dataset', 'technique', 'state'] + list(COMPARISON_METRICS.keys())[:5]\n",
     "available_cols = [c for c in display_cols if c in raw_df.columns]\n",
-    "raw_df[available_cols].head(10)"
+    "raw_df[available_cols]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# remove runs with same method and dataset, keep only latest\n",
+    "raw_df = filter_to_latest_run_per_combo(raw_df)  \n",
+    "raw_df "
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "8",
+   "id": "9",
    "metadata": {},
    "source": [
     "## 3. Create Comparison Table"
@@ -191,7 +203,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "9",
+   "id": "10",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +215,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "10",
+   "id": "11",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -217,7 +229,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "11",
+   "id": "12",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -229,7 +241,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "12",
+   "id": "13",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -246,7 +258,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "13",
+   "id": "14",
    "metadata": {},
    "source": [
     "## 4. Summary Statistics"
@@ -255,7 +267,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "14",
+   "id": "15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,7 +277,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "15",
+   "id": "16",
    "metadata": {},
    "source": [
     "## 5. Winner Heatmap\n",
@@ -276,7 +288,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "16",
+   "id": "17",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -287,7 +299,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "17",
+   "id": "18",
    "metadata": {},
    "source": [
     "## 6. Metric-by-Metric Bar Charts"
@@ -296,21 +308,21 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "18",
+   "id": "19",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Create bar charts for all metrics\n",
-    "for metric_key, metric_info in COMPARISON_METRICS.items():\n",
-    "    fig = plot_grouped_bar_chart(comparison_df, metric_key, figsize=(14, 6))\n",
-    "    if fig:\n",
-    "        plt.show()\n",
-    "        plt.close()"
+    "# # Create bar charts for all metrics\n",
+    "# for metric_key, metric_info in COMPARISON_METRICS.items():\n",
+    "#     fig = plot_grouped_bar_chart(comparison_df, metric_key, figsize=(14, 6))\n",
+    "#     if fig:\n",
+    "#         plt.show()\n",
+    "#         plt.close()"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "19",
+   "id": "20",
    "metadata": {},
    "source": [
     "## 7. Dataset-Specific Radar Charts\n",
@@ -321,7 +333,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "20",
+   "id": "21",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -335,7 +347,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "21",
+   "id": "22",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,7 +413,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "22",
+   "id": "23",
    "metadata": {},
    "source": [
     "## 8. Interactive Plotly Visualizations (if available)"
@@ -410,7 +422,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "23",
+   "id": "24",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -457,7 +469,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "24",
+   "id": "25",
    "metadata": {},
    "source": [
     "## 9. Cross-Dataset Summary\n",
@@ -468,7 +480,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "25",
+   "id": "26",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -522,7 +534,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "26",
+   "id": "27",
    "metadata": {},
    "source": [
     "## 10. Export Results"
@@ -531,7 +543,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "27",
+   "id": "28",
    "metadata": {},
    "outputs": [],
    "source": [
