Enhance dataset visualization fetching

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -275,9 +275,9 @@
    "id": "15",
    "metadata": {},
    "source": [
-    "### Iris Visualizations: DPG vs DiCE\n",
+    "### Dataset Visualizations: DPG vs DiCE\n",
     "\n",
-    "Fetch and display visualizations from WandB runs side-by-side."
+    "Fetch and display visualizations from WandB runs side-by-side. Select a dataset from the dropdown below."
    ]
   },
   {
@@ -293,6 +293,8 @@
     "import re\n",
     "import tempfile\n",
     "import os\n",
+    "import ipywidgets as widgets\n",
+    "from IPython.display import display, clear_output\n",
     "\n",
     "def fetch_visualizations_from_runs(dpg_run_id: str, dice_run_id: str, entity: str, project: str):\n",
     "    \"\"\"\n",
@@ -400,29 +402,85 @@
     "            plt.show()\n",
     "            plt.close()\n",
     "\n",
-    "# Get iris runs from the filtered data\n",
-    "iris_runs = raw_df[raw_df['dataset'] == 'iris']\n",
-    "if len(iris_runs) >= 2:\n",
-    "    dpg_run = iris_runs[iris_runs['technique'] == 'dpg'].iloc[0] if len(iris_runs[iris_runs['technique'] == 'dpg']) > 0 else None\n",
-    "    dice_run = iris_runs[iris_runs['technique'] == 'dice'].iloc[0] if len(iris_runs[iris_runs['technique'] == 'dice']) > 0 else None\n",
+    "def fetch_dataset_visualizations(dataset_name: str):\n",
+    "    \"\"\"Fetch visualizations for a specific dataset.\"\"\"\n",
+    "    global viz_dict, constraints_overview, dpg_name, dice_name, selected_dataset\n",
     "    \n",
-    "    if dpg_run is not None and dice_run is not None:\n",
-    "        dpg_run_id = dpg_run['run_id']\n",
-    "        dice_run_id = dice_run['run_id']\n",
-    "        print(f\"Fetching visualizations for iris:\")\n",
-    "        print(f\"  DPG:  {dpg_run_id} ({dpg_run['run_name']})\")\n",
-    "        print(f\"  DiCE: {dice_run_id} ({dice_run['run_name']})\")\n",
-    "        \n",
-    "        viz_dict, constraints_overview, dpg_name, dice_name = fetch_visualizations_from_runs(\n",
-    "            dpg_run_id, dice_run_id, \n",
-    "            WANDB_ENTITY, WANDB_PROJECT\n",
-    "        )\n",
-    "        print(f\"\\nAvailable visualization types: {list(viz_dict.keys())}\")\n",
-    "        print(f\"Constraints overview available: {constraints_overview is not None}\")\n",
-    "    else:\n",
-    "        print(\"Could not find both DPG and DiCE runs for iris\")\n",
-    "else:\n",
-    "    print(\"Not enough iris runs found\")"
+    "    selected_dataset = dataset_name\n",
+    "    dataset_runs = raw_df[raw_df['dataset'] == dataset_name]\n",
+    "    \n",
+    "    if len(dataset_runs) < 2:\n",
+    "        print(f\"Not enough runs found for {dataset_name}\")\n",
+    "        return False\n",
+    "    \n",
+    "    dpg_run = dataset_runs[dataset_runs['technique'] == 'dpg'].iloc[0] if len(dataset_runs[dataset_runs['technique'] == 'dpg']) > 0 else None\n",
+    "    dice_run = dataset_runs[dataset_runs['technique'] == 'dice'].iloc[0] if len(dataset_runs[dataset_runs['technique'] == 'dice']) > 0 else None\n",
+    "    \n",
+    "    if dpg_run is None or dice_run is None:\n",
+    "        print(f\"Could not find both DPG and DiCE runs for {dataset_name}\")\n",
+    "        return False\n",
+    "    \n",
+    "    dpg_run_id = dpg_run['run_id']\n",
+    "    dice_run_id = dice_run['run_id']\n",
+    "    print(f\"Fetching visualizations for {dataset_name}:\")\n",
+    "    print(f\"  DPG:  {dpg_run_id} ({dpg_run['run_name']})\")\n",
+    "    print(f\"  DiCE: {dice_run_id} ({dice_run['run_name']})\")\n",
+    "    \n",
+    "    viz_dict, constraints_overview, dpg_name, dice_name = fetch_visualizations_from_runs(\n",
+    "        dpg_run_id, dice_run_id, \n",
+    "        WANDB_ENTITY, WANDB_PROJECT\n",
+    "    )\n",
+    "    print(f\"\\nAvailable visualization types: {list(viz_dict.keys())}\")\n",
+    "    print(f\"Constraints overview available: {constraints_overview is not None}\")\n",
+    "    return True\n",
+    "\n",
+    "# Get available datasets that have both DPG and DiCE runs\n",
+    "available_viz_datasets = []\n",
+    "for ds in INCLUDED_DATASETS:\n",
+    "    ds_runs = raw_df[raw_df['dataset'] == ds]\n",
+    "    has_dpg = len(ds_runs[ds_runs['technique'] == 'dpg']) > 0\n",
+    "    has_dice = len(ds_runs[ds_runs['technique'] == 'dice']) > 0\n",
+    "    if has_dpg and has_dice:\n",
+    "        available_viz_datasets.append(ds)\n",
+    "\n",
+    "print(f\"Datasets with both DPG and DiCE runs: {available_viz_datasets}\")\n",
+    "\n",
+    "# Create dropdown widget\n",
+    "dataset_dropdown = widgets.Dropdown(\n",
+    "    options=available_viz_datasets,\n",
+    "    value=available_viz_datasets[0] if available_viz_datasets else None,\n",
+    "    description='Dataset:',\n",
+    "    style={'description_width': 'initial'},\n",
+    "    layout=widgets.Layout(width='300px')\n",
+    ")\n",
+    "\n",
+    "# Create fetch button\n",
+    "fetch_button = widgets.Button(\n",
+    "    description='Fetch Visualizations',\n",
+    "    button_style='primary',\n",
+    "    layout=widgets.Layout(width='200px')\n",
+    ")\n",
+    "\n",
+    "# Output area for status messages\n",
+    "status_output = widgets.Output()\n",
+    "\n",
+    "def on_fetch_click(b):\n",
+    "    with status_output:\n",
+    "        clear_output()\n",
+    "        fetch_dataset_visualizations(dataset_dropdown.value)\n",
+    "\n",
+    "fetch_button.on_click(on_fetch_click)\n",
+    "\n",
+    "# Display widgets\n",
+    "display(widgets.HBox([dataset_dropdown, fetch_button]))\n",
+    "display(status_output)\n",
+    "\n",
+    "# Initialize with first dataset\n",
+    "selected_dataset = available_viz_datasets[0] if available_viz_datasets else None\n",
+    "viz_dict = {}\n",
+    "constraints_overview = None\n",
+    "dpg_name = None\n",
+    "dice_name = None"
    ]
   },
   {
@@ -432,14 +490,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Display selected visualizations side-by-side\n",
+    "# Display selected visualizations side-by-side for the selected dataset\n",
     "# Choose which visualization types to display (or set to None for all)\n",
     "SELECTED_VIZ_TYPES = ['standard_deviation', 'comparison', 'heatmap', 'pca_clean', 'feature_changes_radar']\n",
     "\n",
     "if 'viz_dict' in dir() and viz_dict:\n",
+    "    print(f\"Showing visualizations for: {selected_dataset}\")\n",
+    "    print(f\"=\" * 50)\n",
     "    download_and_display_comparison(viz_dict, constraints_overview, dpg_name, dice_name, selected_types=SELECTED_VIZ_TYPES)\n",
     "else:\n",
-    "    print(\"Run the previous cell first to fetch visualizations\")"
+    "    print(\"Select a dataset and click 'Fetch Visualizations' in the cell above first\")"
    ]
   },
   {
