Load priority datasets from config

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -85,6 +85,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import yaml\n",
+    "import os\n",
+    "\n",
     "# WandB Configuration\n",
     "WANDB_ENTITY = 'mllab-ts-universit-di-trieste'  # Your WandB team/username\n",
     "WANDB_PROJECT = 'CounterFactualDPG'  # Case-sensitive project name\n",
@@ -103,9 +106,13 @@
     "# Toggle: Set to True to apply excluded datasets from config.yaml, False to include all datasets\n",
     "APPLY_EXCLUDED_DATASETS = True\n",
     "\n",
-    "# Optional: Only include these specific datasets (set to None to disable this filter)\n",
-    "INCLUDED_DATASETS = ['iris', 'abalone', 'diabetes', 'banknote_authentication', \n",
-    "                     'education_dataset', 'energy_dataset', 'finance_dataset']\n",
+    "# Load priority_datasets from main config\n",
+    "config_path = '../configs/config.yaml'\n",
+    "INCLUDED_DATASETS = None\n",
+    "if os.path.exists(config_path):\n",
+    "    with open(config_path, 'r') as f:\n",
+    "        config = yaml.safe_load(f)\n",
+    "        INCLUDED_DATASETS = config.get('priority_datasets', None)\n",
     "\n",
     "print(f\"Entity: {WANDB_ENTITY}\")\n",
     "print(f\"Project: {WANDB_PROJECT}\")\n",
