Add small metrics option to comparison

--- a/notebooks/technique_comparison.ipynb
+++ b/notebooks/technique_comparison.ipynb
@@ -215,7 +215,7 @@
    "outputs": [],
    "source": [
     "# Create aggregated comparison table\n",
-    "comparison_df = create_comparison_table(raw_df)\n",
+    "comparison_df = create_comparison_table(raw_df, small=True)\n",
     "comparison_df"
    ]
   },
