Fix LaTeX formatting in metrics

--- a/notebooks/DPG_CF_statistics.ipynb
+++ b/notebooks/DPG_CF_statistics.ipynb
@@ -435,22 +435,27 @@
     "    \"perc_actionable_cf_all\":\"Actionability\",\n",
     "}\n",
     "\n",
-    "# Metric goal mapping (internal -> ↑ or ↓)\n",
+    "# Metric goal mapping (internal -> LaTeX arrow command)\n",
     "metric_goal_map = {\n",
-    "    \"plausibility_nbr_cf\":   (\"↓\", \"lower\"),  # (symbol, direction)\n",
-    "    \"count_diversity_all\":   (\"↑\", \"higher\"),\n",
-    "    \"avg_nbr_changes\":       (\"↓\", \"lower\"),\n",
-    "    \"accuracy_knn_sklearn\":  (\"↑\", \"higher\"),\n",
-    "    \"runtime\":               (\"↓\", \"lower\"),\n",
-    "    \"distance_mh\":           (\"↓\", \"lower\"),\n",
-    "    \"perc_valid_cf_all\":     (\"↑\", \"higher\"),\n",
-    "    \"perc_actionable_cf_all\":(\"↑\", \"higher\"),\n",
+    "    \"plausibility_nbr_cf\":   (\"\\\\downarrow\", \"lower\"),\n",
+    "    \"count_diversity_all\":   (\"\\\\uparrow\", \"higher\"),\n",
+    "    \"avg_nbr_changes\":       (\"\\\\downarrow\", \"lower\"),\n",
+    "    \"accuracy_knn_sklearn\":  (\"\\\\uparrow\", \"higher\"),\n",
+    "    \"runtime\":               (\"\\\\downarrow\", \"lower\"),\n",
+    "    \"distance_mh\":           (\"\\\\downarrow\", \"lower\"),\n",
+    "    \"perc_valid_cf_all\":     (\"\\\\uparrow\", \"higher\"),\n",
+    "    \"perc_actionable_cf_all\":(\"\\\\uparrow\", \"higher\"),\n",
     "}\n",
+    "\n",
+    "# Sort by pretty name alphabetically\n",
+    "res_df_sorted = res_df.copy()\n",
+    "res_df_sorted[\"pretty_name\"] = res_df_sorted[\"metric\"].map(metric_name_map)\n",
+    "res_df_sorted = res_df_sorted.sort_values(\"pretty_name\")\n",
     "\n",
     "# Build LaTeX table rows\n",
     "latex_rows = []\n",
     "\n",
-    "for _, row in res_df.iterrows():\n",
+    "for _, row in res_df_sorted.iterrows():\n",
     "    metric = row[\"metric\"]\n",
     "    pretty_name = metric_name_map.get(metric, metric)\n",
     "    goal_symbol, goal_direction = metric_goal_map.get(metric, (\"\", \"\"))\n",
@@ -481,12 +486,9 @@
     "    if is_significant and best_method != \"Both\":\n",
     "        best_method = f\"\\\\textbf{{{best_method}}}\"\n",
     "    \n",
-    "    # Format the row\n",
-    "    latex_row = f\"    \\\\texttt{{{pretty_name}}}  & ${goal_symbol}$   & {n_datasets} & {median_diff:6.2f}  & {p_value:.2f} & {best_method}\"\n",
+    "    # Format the row exactly as in the example\n",
+    "    latex_row = f\"    \\\\texttt{{{pretty_name}}}  & ${goal_symbol}$   & {n_datasets} & {median_diff:6.2f}  & {p_value:.2f} & {best_method}            \\\\\\\\\"\n",
     "    latex_rows.append(latex_row)\n",
-    "\n",
-    "# Sort rows alphabetically by pretty name (optional, or keep statistical order)\n",
-    "# For now, keep the order from res_df\n",
     "\n",
     "# Assemble full LaTeX table\n",
     "latex_table = r\"\"\"\\begin{table}[b!]\n",
@@ -504,10 +506,10 @@
     "    \\midrule\n",
     "\"\"\"\n",
     "\n",
-    "latex_table += \" \\\\\\\\\\n\".join(latex_rows)\n",
+    "for row in latex_rows:\n",
+    "    latex_table += row + \"\\n\"\n",
     "\n",
-    "latex_table += r\"\"\"\n",
-    "    \\bottomrule\n",
+    "latex_table += r\"\"\"    \\bottomrule\n",
     "  \\end{tabular}\n",
     "\\end{table}\"\"\"\n",
     "\n",
