Fix LaTeX table formatting

--- a/notebooks/DPG_CF_statistics.ipynb
+++ b/notebooks/DPG_CF_statistics.ipynb
@@ -452,6 +452,9 @@
     "res_df_sorted[\"pretty_name\"] = res_df_sorted[\"metric\"].map(metric_name_map)\n",
     "res_df_sorted = res_df_sorted.sort_values(\"pretty_name\")\n",
     "\n",
+    "# Get the number of datasets used (should be same for all metrics)\n",
+    "n_datasets = int(res_df_sorted.iloc[0][\"n_datasets_used\"])\n",
+    "\n",
     "# Build LaTeX table rows\n",
     "latex_rows = []\n",
     "\n",
@@ -460,7 +463,6 @@
     "    pretty_name = metric_name_map.get(metric, metric)\n",
     "    goal_symbol, goal_direction = metric_goal_map.get(metric, (\"\", \"\"))\n",
     "    \n",
-    "    n_datasets = int(row[\"n_datasets_used\"])\n",
     "    median_diff = row[\"median_diff(DPG - DiCE)\"]\n",
     "    p_value = row[\"p_value_raw\"]\n",
     "    \n",
@@ -486,24 +488,24 @@
     "    if is_significant and best_method != \"Both\":\n",
     "        best_method = f\"\\\\textbf{{{best_method}}}\"\n",
     "    \n",
-    "    # Format the row exactly as in the example\n",
-    "    latex_row = f\"    \\\\texttt{{{pretty_name}}}  & ${goal_symbol}$   & {n_datasets} & {median_diff:6.2f}  & {p_value:.2f} & {best_method}            \\\\\\\\\"\n",
+    "    # Format the row exactly as in the example (without n column)\n",
+    "    latex_row = f\"    \\\\texttt{{{pretty_name}}}  & ${goal_symbol}$ & {median_diff:6.2f}  & {p_value:.2f} & {best_method}            \\\\\\\\\"\n",
     "    latex_rows.append(latex_row)\n",
     "\n",
     "# Assemble full LaTeX table\n",
-    "latex_table = r\"\"\"\\begin{table}[b!]\n",
-    "  \\centering\n",
-    "  \\caption{Paired Wilcoxon signed-rank comparison between DPG-CF and DiCE across\n",
-    "  13 datasets. $\\Delta = \\text{DPG-CF} - \\text{DiCE}$. The ``Goal'' column indicates\n",
-    "  whether higher ($\\uparrow$) or lower ($\\downarrow$) values are desirable. The\n",
+    "latex_table = f\"\"\"\\\\begin{{table}}[b!]\n",
+    "  \\\\centering\n",
+    "  \\\\caption{{Paired Wilcoxon signed-rank comparison between DPG-CF and DiCE across\n",
+    "  {n_datasets} datasets. $\\\\Delta = \\\\text{{DPG-CF}} - \\\\text{{DiCE}}$. The ``Goal'' column indicates\n",
+    "  whether higher ($\\\\uparrow$) or lower ($\\\\downarrow$) values are desirable. The\n",
     "  ``Best'' column reports the method with better median performance according to\n",
     "  this goal; method names in bold denote statistically significant differences\n",
-    "  (Wilcoxon test, $p < 0.05$).}\n",
-    "  \\label{tab:wilcoxon_results}\n",
-    "  \\begin{tabular}{lccccl}\n",
-    "    \\toprule\n",
-    "    Metric & Goal & $n$ & median $\\Delta$ & $p$-value & Best \\\\\n",
-    "    \\midrule\n",
+    "  (Wilcoxon test, $p < 0.05$). All metrics computed using $n = {n_datasets}$ datasets.}}\n",
+    "  \\\\label{{tab:wilcoxon_results}}\n",
+    "  \\\\begin{{tabular}}{{lcccl}}\n",
+    "    \\\\toprule\n",
+    "    Metric & Goal & median $\\\\Delta$ & $p$-value & Best \\\\\\\\\n",
+    "    \\\\midrule\n",
     "\"\"\"\n",
     "\n",
     "for row in latex_rows:\n",
