Add constraints visualization plot

--- a/notebooks/reproducibility_diabetes.ipynb
+++ b/notebooks/reproducibility_diabetes.ipynb
@@ -218,7 +218,17 @@
     "print(\"\\nSample constraints (first 3 features):\")\n",
     "for i, feature in enumerate(FEATURE_NAMES[:3]):\n",
     "    if feature in normalized_constraints:\n",
-    "        print(f\"  {feature}: {normalized_constraints[feature]}\")"
+    "        print(f\"  {feature}: {normalized_constraints[feature]}\")\n",
+    "\n",
+    "# Visualize constraints\n",
+    "print(\"\\nConstraints visualization:\")\n",
+    "from CounterFactualVisualizer import plot_constraints\n",
+    "\n",
+    "plot_constraints(\n",
+    "    constraints=constraints,\n",
+    "    overlapping=True,\n",
+    "    class_colors_list=['purple', 'green', 'orange']\n",
+    ")"
    ]
   },
   {
