Adjust sample index for consistency

--- a/notebooks/reproducibility_diabetes.ipynb
+++ b/notebooks/reproducibility_diabetes.ipynb
@@ -261,7 +261,7 @@
    "outputs": [],
    "source": [
     "# Select a sample from training set for counterfactual generation\n",
-    "SAMPLE_INDEX = 0  # Use first sample\n",
+    "SAMPLE_INDEX = 2  # Use sample index from config (matching experiment)\n",
     "\n",
     "original_sample_values = TRAIN_FEATURES.iloc[SAMPLE_INDEX].values\n",
     "ORIGINAL_SAMPLE = dict(zip(FEATURE_NAMES, map(float, original_sample_values)))\n",
@@ -276,7 +276,7 @@
     "print(f\"Original class: {ORIGINAL_CLASS}\")\n",
     "print(f\"Target class: {TARGET_CLASS}\")\n",
     "print(f\"\\nOriginal sample values:\")\n",
-    "display(SAMPLE_DATAFRAME)"
+    "display(SAMPLE_DATAFRAME)\n"
    ]
   },
   {
@@ -324,6 +324,14 @@
    "outputs": [],
    "source": [
     "# Configure for DPG method\n",
+    "import random\n",
+    "import time\n",
+    "\n",
+    "# Set random seeds for reproducibility (matching experiment seed)\n",
+    "SEED = 42\n",
+    "np.random.seed(SEED)\n",
+    "random.seed(SEED)\n",
+    "\n",
     "config_dpg = config.to_dict()\n",
     "config_dpg['counterfactual']['method'] = 'dpg'\n",
     "\n",
@@ -348,12 +356,12 @@
     "    CATEGORICAL_INDICES\n",
     ")\n",
     "\n",
-    "print(f\"Generating {NUM_CFS} counterfactuals using DPG...\")\n",
+    "print(f\"Generating {NUM_CFS} counterfactuals using DPG (seed={SEED})...\")\n",
     "start_time = time.perf_counter()\n",
     "result_dpg = run_counterfactual_generation(generation_args_dpg)\n",
     "dpg_runtime = time.perf_counter() - start_time\n",
     "\n",
-    "print(f\"✓ DPG generation completed in {dpg_runtime:.3f}s\")"
+    "print(f\"✓ DPG generation completed in {dpg_runtime:.3f}s\")\n"
    ]
   },
   {
@@ -397,6 +405,10 @@
    "outputs": [],
    "source": [
     "# Configure for DiCE method\n",
+    "# Set random seeds for reproducibility\n",
+    "np.random.seed(SEED)\n",
+    "random.seed(SEED)\n",
+    "\n",
     "config_dice = config.to_dict()\n",
     "config_dice['counterfactual']['method'] = 'dice'\n",
     "config_dice['experiment_params']['requested_counterfactuals'] = NUM_CFS\n",
@@ -414,12 +426,12 @@
     "    CATEGORICAL_INDICES\n",
     ")\n",
     "\n",
-    "print(f\"Generating {NUM_CFS} counterfactuals using DiCE...\")\n",
+    "print(f\"Generating {NUM_CFS} counterfactuals using DiCE (seed={SEED})...\")\n",
     "start_time = time.perf_counter()\n",
     "result_dice = run_counterfactual_generation(generation_args_dice)\n",
     "dice_runtime = time.perf_counter() - start_time\n",
     "\n",
-    "print(f\"✓ DiCE generation completed in {dice_runtime:.3f}s\")"
+    "print(f\"✓ DiCE generation completed in {dice_runtime:.3f}s\")\n"
    ]
   },
   {
