Remove unused imports and comments

--- a/notebooks/reproducibility_diabetes.ipynb
+++ b/notebooks/reproducibility_diabetes.ipynb
@@ -26,9 +26,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Setup and imports\n",
     "import sys\n",
-    "import os\n",
     "import numpy as np\n",
     "import pandas as pd\n",
     "import matplotlib.pyplot as plt\n",
@@ -58,13 +56,12 @@
    "source": [
     "# Import project modules\n",
     "from utils.dataset_loader import load_dataset\n",
-    "from utils.config_manager import load_config, DictConfig\n",
+    "from utils.config_manager import load_config\n",
     "from utils.replication_runner import run_counterfactual_generation\n",
     "from ConstraintParser import ConstraintParser\n",
     "from CounterFactualMetrics import evaluate_cf_list\n",
     "from CounterFactualVisualizer import (\n",
     "    plot_pca_with_counterfactuals_comparison,\n",
-    "    plot_sample_and_counterfactual_heatmap,\n",
     "    heatmap_techniques,\n",
     "    plot_ridge_comparison\n",
     ")\n",
@@ -99,9 +96,9 @@
     "config = load_config(str(config_path))\n",
     "\n",
     "print(f\"Loaded config for dataset: {DATASET_NAME}\")\n",
-    "print(f\"Model type: {config.model.type}\")\n",
-    "print(f\"Test size: {config.data.test_size}\")\n",
-    "print(f\"Random state: {config.data.random_state}\")"
+    "print(f\"Model type: {config.model.type}\") # type: ignore\n",
+    "print(f\"Test size: {config.data.test_size}\") # type: ignore\n",
+    "print(f\"Random state: {config.data.random_state}\") # type: ignore"
    ]
   },
   {
@@ -148,8 +145,8 @@
     "TRAIN_FEATURES, TEST_FEATURES, TRAIN_LABELS, TEST_LABELS = train_test_split(\n",
     "    FEATURES_DF,\n",
     "    LABELS,\n",
-    "    test_size=config.data.test_size,\n",
-    "    random_state=config.data.random_state\n",
+    "    test_size=config.data.test_size, # type: ignore\n",
+    "    random_state=config.data.random_state # type: ignore\n",
     ")\n",
     "\n",
     "print(f\"Training samples: {len(TRAIN_FEATURES)}\")\n",
@@ -164,7 +161,7 @@
    "outputs": [],
    "source": [
     "# Train Random Forest model\n",
-    "model_config = config.model.to_dict() if hasattr(config.model, 'to_dict') else dict(config.model)\n",
+    "model_config = config.model.to_dict() if hasattr(config.model, 'to_dict') else dict(config.model) # type: ignore\n",
     "model_params = {k: v for k, v in model_config.items() if k != 'type' and v is not None}\n",
     "\n",
     "model = RandomForestClassifier(**model_params)\n",
@@ -174,7 +171,7 @@
     "train_score = model.score(TRAIN_FEATURES, TRAIN_LABELS)\n",
     "test_score = model.score(TEST_FEATURES, TEST_LABELS)\n",
     "\n",
-    "print(f\"✓ Model trained successfully\")\n",
+    "print(\"✓ Model trained successfully\")\n",
     "print(f\"Train accuracy: {train_score:.4f}\")\n",
     "print(f\"Test accuracy: {test_score:.4f}\")"
    ]
@@ -214,7 +211,7 @@
     "\n",
     "print(f\"✓ DPG constraints extracted in {extraction_time:.3f}s\")\n",
     "\n",
-    "print(f\"\\nConstraints summary:\")\n",
+    "print(\"\\nConstraints summary:\")\n",
     "print(f\"  Number of classes: {len(normalized_constraints)}\")\n",
     "for class_name in sorted(normalized_constraints.keys()):\n",
     "    print(f\"  {class_name}: {len(normalized_constraints[class_name])} features with constraints\")\n",
@@ -275,7 +272,7 @@
     "print(f\"Sample index: {SAMPLE_INDEX}\")\n",
     "print(f\"Original class: {ORIGINAL_CLASS}\")\n",
     "print(f\"Target class: {TARGET_CLASS}\")\n",
-    "print(f\"\\nOriginal sample values:\")\n",
+    "print(\"\\nOriginal sample values:\")\n",
     "display(SAMPLE_DATAFRAME)\n"
    ]
   },
@@ -372,20 +369,20 @@
    "outputs": [],
    "source": [
     "# Extract DPG counterfactuals\n",
-    "dpg_counterfactuals = result_dpg.get('all_counterfactuals', [])\n",
+    "dpg_counterfactuals = result_dpg.get('all_counterfactuals', []) # type: ignore\n",
     "dpg_cf_df = pd.DataFrame(dpg_counterfactuals)\n",
     "dpg_predictions = model.predict(dpg_cf_df) if len(dpg_counterfactuals) > 0 else []\n",
     "\n",
     "# Count valid (matching target class)\n",
     "dpg_valid = sum(1 for pred in dpg_predictions if pred == TARGET_CLASS)\n",
     "\n",
-    "print(f\"DPG Results:\")\n",
+    "print(\"DPG Results:\")\n",
     "print(f\"  Generated: {len(dpg_counterfactuals)} counterfactuals\")\n",
     "print(f\"  Valid (target class): {dpg_valid}/{len(dpg_counterfactuals)}\")\n",
     "print(f\"  Success rate: {dpg_valid/NUM_CFS*100:.1f}%\")\n",
     "\n",
     "if len(dpg_counterfactuals) > 0:\n",
-    "    print(f\"\\nFirst DPG counterfactual:\")\n",
+    "    print(\"\\nFirst DPG counterfactual:\")\n",
     "    display(pd.DataFrame([dpg_counterfactuals[0]]))"
    ]
   },
@@ -449,13 +446,13 @@
     "# Count valid\n",
     "dice_valid = sum(1 for pred in dice_predictions if pred == TARGET_CLASS)\n",
     "\n",
-    "print(f\"DiCE Results:\")\n",
+    "print(\"DiCE Results:\")\n",
     "print(f\"  Generated: {len(dice_counterfactuals)} counterfactuals\")\n",
     "print(f\"  Valid (target class): {dice_valid}/{len(dice_counterfactuals)}\")\n",
     "print(f\"  Success rate: {dice_valid/NUM_CFS*100:.1f}%\")\n",
     "\n",
     "if len(dice_counterfactuals) > 0:\n",
-    "    print(f\"\\nFirst DiCE counterfactual:\")\n",
+    "    print(\"\\nFirst DiCE counterfactual:\")\n",
     "    display(pd.DataFrame([dice_counterfactuals[0]]))"
    ]
   },
@@ -820,6 +817,9 @@
    "outputs": [],
    "source": [
     "# Individual Counterfactual Comparison (first CF from each method)\n",
+    "from CounterFactualVisualizer import plot_sample_and_counterfactual_comparison_combined\n",
+    "\n",
+    "\n",
     "if len(dpg_counterfactuals) > 0 and len(dice_counterfactuals) > 0:\n",
     "    from IPython.display import Image, display\n",
     "    import io\n",
@@ -855,14 +855,7 @@
    "id": "30",
    "metadata": {},
    "source": [
-    "## 9. Summary\n",
-    "\n",
-    "This notebook demonstrated the complete workflow for counterfactual generation on the diabetes dataset:\n",
-    "- Both DPG and DiCE methods were applied\n",
-    "- Metrics were computed and compared\n",
-    "- Multiple visualizations show the differences between methods\n",
-    "\n",
-    "Key observations can be made from the metrics comparison table and visualizations above."
+    "## 9. Summary of Results"
    ]
   },
   {
@@ -879,13 +872,13 @@
     "print(f\"Dataset: {DATASET_NAME}\")\n",
     "print(f\"Sample index: {SAMPLE_INDEX}\")\n",
     "print(f\"Original class: {ORIGINAL_CLASS} → Target class: {TARGET_CLASS}\")\n",
-    "print(f\"\\nModel Performance:\")\n",
+    "print(\"\\nModel Performance:\")\n",
     "print(f\"  Train accuracy: {train_score:.4f}\")\n",
     "print(f\"  Test accuracy: {test_score:.4f}\")\n",
-    "print(f\"\\nDPG Results:\")\n",
+    "print(\"\\nDPG Results:\")\n",
     "print(f\"  Valid CFs: {dpg_valid}/{NUM_CFS} ({dpg_valid/NUM_CFS*100:.1f}%)\")\n",
     "print(f\"  Runtime: {dpg_runtime:.3f}s\")\n",
-    "print(f\"\\nDiCE Results:\")\n",
+    "print(\"\\nDiCE Results:\")\n",
     "print(f\"  Valid CFs: {dice_valid}/{NUM_CFS} ({dice_valid/NUM_CFS*100:.1f}%)\")\n",
     "print(f\"  Runtime: {dice_runtime:.3f}s\")\n",
     "print(\"=\"*60)"
